components/ollama/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  labels:
    app: ollama
    app.kubernetes.io/component: ollama
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
    app.kubernetes.io/part-of: sasya-arogya
spec:
  ports:
  - name: http
    port: 11434
    protocol: TCP
    targetPort: 11434
  selector:
    app: ollama
  sessionAffinity: None
  type: ClusterIP
